# 16bit-vm

./: CMakeLists.txt  Cargo.toml  README.md  basic.out  build.sh  grammar.bnf  test.asm
docs/: BetterOpCodes.md  CompilerTODO.md  ObjectFileTODO.md
include/: addr.hpp  fmt.hpp  hexutils.hpp  instructions.hpp  interpreter.hpp  memory.hpp  registers.hpp  utils.hpp
include/assembly/: compiler.hpp
include/compiler/: assm.hpp
include/utils/: fmt.hpp  hexutils.hpp  strmanip.hpp
src/: hexutils.cpp  instructions.cpp  interpreter.cpp  main.cpp  main.rs  memory.cpp  registers.cpp
src/assembler/: compiler.cpp  main.cpp
src/assembly/: compiler.cpp
src/byte_array/: mod.rs
src/compiler/: assm.cpp
src/cpu/: cpu.rs  mod.rs  op_code.rs  reg.rs
src/vm/: cpu.rs  errors.rs  main.cpp  mmu.rs  mod.rs  op_code.rs
src/vm/cpu/: cpu.rs  errors.rs  mod.rs
src/vm/device/: byte_array.rs  device.rs  mod.rs  stdout.rs
src/vm/devices/: device.rs  errors.rs  mod.rs  stdout.rs
src/vm/mmu/: errors.rs  mod.rs
tests/: basic.asm  forwarjmp.asm  loops.asm  test.asm  test_stack.asm
